--- a/html/boke_html/com/blog/view/article/home.html
+++ b/html/boke_html/com/blog/view/article/home.html
@@ -75,6 +75,20 @@
             <!---- Start Widget ---->
             <div class="widget wid-post">
                 <div class="wid-header" style="margin-bottom: 0px">
+                    <h5 class="section-title" style="text-align: center"><span>标签云</span></h5>
+                </div>
+                <div class="wid-content" style="margin-top: -20px">
+                    <div class="row">
+                        <label class="label label-success" ng-repeat="x in labelList" href="#" style="margin: 10px 6px 20px 0px !important; line-height: 2; white-space: normal">{{x.name}} <span>{{x.articleCount}}</span></label>
+                    </div>
+                        <!--<div ng-repeat="x in lastArticles" style="margin: 10px; display: inline">-->
+                       <!---->
+                    <!--</div>-->
+                </div>
+            </div>
+            <!---- Start Widget ---->
+            <div class="widget wid-post">
+                <div class="wid-header" style="margin-bottom: 0px">
                     <h5 class="section-title" style="text-align: center"><span>最近发布</span></h5>
                 </div>
                 <div class="wid-content">
@@ -95,7 +109,7 @@
                     <h5 class="section-title" style="text-align: center"><span>阅读排行</span></h5>
                 </div>
                 <div class="wid-content">
-                    <div ng-repeat="x in lastArticles" style="margin-top: 20px">
+                    <div ng-repeat="x in hotArticles" style="margin-top: 20px">
                         <a href="#/article/{{x.id}}">
                             <div>{{x.title}}</div>
                             <div>
@@ -106,22 +120,22 @@
                     </div>
                 </div>
             </div>
-            <div class="widget wid-post">
-                <div class="wid-header" style="margin-bottom: 0px">
-                    <h5 class="section-title" style="text-align: center"><span>文章归档</span></h5>
-                </div>
-                <div class="wid-content">
-                    <div ng-repeat="x in lastArticles" style="margin-top: 20px">
-                        <a href="#/article/{{x.id}}">
-                            <div>{{x.title}}</div>
-                            <div>
-                                <span>浏览量:{{x.readCount}}</span>
-                                <span>| 评论:{{x.reviewCount}}</span>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
+            <!--<div class="widget wid-post">-->
+                <!--<div class="wid-header" style="margin-bottom: 0px">-->
+                    <!--<h5 class="section-title" style="text-align: center"><span>文章归档</span></h5>-->
+                <!--</div>-->
+                <!--<div class="wid-content">-->
+                    <!--<div ng-repeat="x in lastArticles" style="margin-top: 20px">-->
+                        <!--<a href="#/article/{{x.id}}">-->
+                            <!--<div>{{x.title}}</div>-->
+                            <!--<div>-->
+                                <!--<span>浏览量:{{x.readCount}}</span>-->
+                                <!--<span>| 评论:{{x.reviewCount}}</span>-->
+                            <!--</div>-->
+                        <!--</a>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
 
         </div>
     </div>
